--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "shiki": "^3.4.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
